# MT_DGtalTutoIWCIA

./: CMakeLists.txt  tuto1_readInput.cpp  tuto2_compAlphaThickSegment.cpp  tuto3_TangentialCover.cpp  tuto4_SaturatedSegmentation.cpp  tuto5_MeaningfulThickness1Pt.cpp  tuto6_MeaningfulThicknessAllPt.cpp
